src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AlternateEmail__c</fullName>
        <description>An optional email address not captured in other email fields.</description>
        <inlineHelpText>An optional email address not captured in other email fields.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Chosen_Full_Name__c</fullName>
        <description>The full name that this Contact prefers to use in place of their legal name.</description>
        <inlineHelpText>The full name that this Contact prefers to use in place of their legal name.</inlineHelpText>
        <label>Chosen Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Status__c</fullName>
        <description>The Contact&apos;s citizenship status.</description>
        <inlineHelpText>The Contact&apos;s citizenship status.</inlineHelpText>
        <label>Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen or U.S. National</fullName>
                </value>
                <value>
                    <fullName>U.S. Dual Citizen</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>U.S. Refugee or Asylee</fullName>
                </value>
                <value>
                    <fullName>Other (Non-U.S.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>The person&apos;s country of citizenship. If this student has dual citizenship, indicate the second country of citizenship in the Dual Citizenship field.</description>
        <inlineHelpText>The person&apos;s country of citizenship. If this student has dual citizenship, indicate the second country of citizenship in the Dual Citizenship field.</inlineHelpText>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommonApp_Id__c</fullName>
        <label>CommonApp Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_JSON__c</fullName>
        <label>Contact JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <description>The country where this person was born.</description>
        <inlineHelpText>The country where this person was born.</inlineHelpText>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. The Contact&apos;s Mailing Address field is automatically populated with the address fields from the current Address record.</description>
        <inlineHelpText>Lookup to the current Address record for this Contact. The Contact&apos;s Mailing Address field is automatically populated with the address fields from the current Address record.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Deceased__c</fullName>
        <description/>
        <inlineHelpText/>
        <label>Date Deceased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this person is deceased. When selected, also enables Do Not Contact, Do Not Call, Email Opt Out, and Fax Opt Out. If the Contact is not the only member of the Household, the Contact name is removed from the Household name.</description>
        <inlineHelpText>Indicates this person is deceased. When selected, also enables Do Not Contact, Do Not Call, Email Opt Out, and Fax Opt Out. If the Contact is not the only member of the Household, the Contact name is removed from the Household name.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this person does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists.</description>
        <inlineHelpText>Indicates this person does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dual_Citizenship__c</fullName>
        <description>For people who have dual citizenship, the second country of citizenship.</description>
        <inlineHelpText>For people who have dual citizenship, the second country of citizenship.</inlineHelpText>
        <label>Dual Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <description>Indicates if this person identifies as Hispanic or Latino.</description>
        <inlineHelpText>Indicates if this person identifies as Hispanic or Latino.</inlineHelpText>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>This field currently isn&apos;t tied to product functionality.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>This field currently isn&apos;t tied to product functionality.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this Contact is excluded from the Household Name.</description>
        <inlineHelpText>When selected, this Contact is excluded from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this person has opted out of disclosure of information per the Family Education Rights and Privacy Act.</description>
        <inlineHelpText>Indicates whether this person has opted out of disclosure of information per the Family Education Rights and Privacy Act.</inlineHelpText>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this student has applied for financial aid.</description>
        <inlineHelpText>Indicates whether this student has applied for financial aid.</inlineHelpText>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former_First_Name__c</fullName>
        <description>The Contact&apos;s former first name.</description>
        <inlineHelpText>The Contact&apos;s former first name.</inlineHelpText>
        <label>Former First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Last_Name__c</fullName>
        <description>The Contact&apos;s former last name.</description>
        <inlineHelpText>The Contact&apos;s former last name.</inlineHelpText>
        <label>Former Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Middle_Name__c</fullName>
        <description>The Contact&apos;s former middle name.</description>
        <inlineHelpText>The Contact&apos;s former middle name.</inlineHelpText>
        <label>Former Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Indicates the person&apos;s self-identified gender.</description>
        <inlineHelpText>Indicates the person&apos;s self-identified gender.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HIPAA_Detail__c</fullName>
        <description>Can be used to store information about the student Contact, such as the names of related Contacts authorized to communicate about the student. May require restricted field visibility so that only authorized users can view.</description>
        <inlineHelpText>Information about this person, such as the names of related Contacts authorized to communicate about the person.</inlineHelpText>
        <label>HIPAA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can be used to indicate that the student Contact&apos;s record is subject to Health Insurance Portability and Accountability Act requirements, without displaying the details of that information.</description>
        <inlineHelpText>Indicates whether this person&apos;s record is subject to Health Insurance Portability and Accountability Act standards.</inlineHelpText>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <description>The county detail for the Mailing Address.</description>
        <label>Mailing County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Background__c</fullName>
        <description>Describe this person&apos;s miltary service, for example, the branch of the military, length of time in the miltary, date of discharge, etc.</description>
        <inlineHelpText>Describe this person&apos;s miltary service, for example, the branch of the military, length of time in the miltary, date of discharge, etc.</inlineHelpText>
        <label>Military Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Military_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this person is currently serving or has previously served in the military.</description>
        <inlineHelpText>Indicates whether this person is currently serving or has previously served in the military.</inlineHelpText>
        <label>Military Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naming_Exclusions__c</fullName>
        <description>Selecting the Household Name option excludes this Contact from the Household Name. NOTE: The Household Formal Greeting and Household Informal Greeting options are not currently tied to existing product functionality.</description>
        <inlineHelpText>Selecting the Household Name option excludes this Contact from the Household Name. NOTE: The Household Formal Greeting and Household Informal Greeting options are not currently tied to existing product functionality.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_County__c</fullName>
        <description>The county detail for the alternate Address.</description>
        <label>Other County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredPhone__c</fullName>
        <description>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</description>
        <inlineHelpText>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>The email (University, Work, Alternate) that this Contact prefers you to use.</description>
        <inlineHelpText>The email (University, Work, Alternate) that this Contact prefers you to use.</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>University Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
                <value>
                    <fullName>Alternate Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Address_Type__c</fullName>
        <description>Indicate what kind of address the Mailing Address is, for example, Work, Home, or Other.</description>
        <inlineHelpText>Indicate what kind of address the Mailing Address is, for example, Work, Home, or Other.</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the main Household (Account record) this Contact is associated with.</description>
        <inlineHelpText>Lookup to the main Household (Account record) this Contact is associated with.</inlineHelpText>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The language the Contact prefers to use.</description>
        <inlineHelpText>The language the Contact prefers to use.</inlineHelpText>
        <label>Primary Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the main Organization (Account record) this Contact is associated with.</description>
        <inlineHelpText>Lookup to the main Organization (Account record) this Contact is associated with.</inlineHelpText>
        <label>Primary Business Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Organization)</relationshipLabel>
        <relationshipName>Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <description>Select the race(s) this person uses to describe themself.</description>
        <inlineHelpText>Select the race(s) this person uses to describe themself.</inlineHelpText>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <description>The religion this person practices.</description>
        <inlineHelpText>The religion this person practices.</inlineHelpText>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atheist</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Address_Type__c</fullName>
        <description>Indicate what kind of address the Secondary Address is, for example, Work, Home, or Other.</description>
        <inlineHelpText>Indicate what kind of address the Secondary Address is, for example, Work, Home, or Other.</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>Social Security Number. Encrypted for confidentiality. Only users with the View Encrypted Data permission can see the unencrypted value.</description>
        <label>Social Security Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UniversityEmail__c</fullName>
        <description>This person&apos;s school email address.</description>
        <inlineHelpText>This person&apos;s school email address.</inlineHelpText>
        <label>University Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WorkEmail__c</fullName>
        <description>The work email for this person.</description>
        <inlineHelpText>The work email for this person.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <description>The work phone number for this person.</description>
        <inlineHelpText>The work phone number for this person.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Address__c</fullName>
        <description>If you&apos;ve set &quot;Work&quot; as the Primary Address type, the Work Address is populated with the Mailing Address values. If &quot;Work&quot; is the Secondary Address type, the Work Address is populated with the &quot;Other Address&quot; values. This field is read-only.</description>
        <formula>if(
    ISPICKVAL(Primary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(MailingStreet) , &quot;&quot; , MailingStreet &amp; &quot;, &quot;) &amp;
    if(ISBLANK(MailingCity) , &quot;&quot; , MailingCity &amp; &quot;, &quot;) &amp;
    if(ISBLANK(MailingState) , &quot;&quot; , MailingState &amp; &quot; &quot;) &amp;
    if(ISBLANK(MailingPostalCode) , &quot;&quot; , MailingPostalCode) &amp;
    If(ISBLANK(MailingCountry ) , &quot;&quot; , &quot;, &quot; &amp; MailingCountry)
    ,
    if(ISPICKVAL(Secondary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(OtherStreet) , &quot;&quot; , OtherStreet &amp; &quot;, &quot;) &amp;
    if(ISBLANK(OtherCity) , &quot;&quot; , OtherCity &amp; &quot;, &quot;) &amp;
    if(ISBLANK(OtherState) , &quot;&quot; , OtherState &amp; &quot; &quot;) &amp;
    if(ISBLANK(OtherPostalCode) , &quot;&quot; , OtherPostalCode) &amp;
    If(ISBLANK(OtherCountry ) , &quot;&quot; , &quot;, &quot; &amp; OtherCountry)
    ,
    &quot;&quot;)
)</formula>
        <inlineHelpText>If you&apos;ve set &quot;Work&quot; as the Primary Address type, the Work Address is populated with the Mailing Address values. If &quot;Work&quot; is the Secondary Address type, the Work Address is populated with the &quot;Other Address&quot; values. This field is read-only.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this Contact&apos;s address won&apos;t be synced with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact. (Applies to Household Contacts only.)</description>
        <inlineHelpText>When selected, this Contact&apos;s address won&apos;t be synced with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact. (Applies to Household Contacts only.)</inlineHelpText>
        <label>Do Not Automatically Update</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>